--- a/aoe.vcproj
+++ b/aoe.vcproj
@@ -184,8 +184,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\obj\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\obj\$(ProjectName)"
 			ConfigurationType="1"
 			>
 			<Tool
@@ -208,7 +208,7 @@
 				Optimization="0"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
-				WholeProgramOptimization="true"
+				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="&quot;$(WDKPATH)\inc\ddk&quot;;&quot;$(WDKPATH)\inc\api&quot;;&quot;$(WDKPATH)\inc\crt&quot;;&quot;$(ProjectDir)src\include&quot;"
 				PreprocessorDefinitions="WIN32;_CONSOLE;_X86_;_DDK_;_NDEBUG;DBG=0;PROJECT_WV=1;_WIN32_WINNT=0x0501;PROJECT_AOE=1"
 				IgnoreStandardIncludePath="true"
@@ -235,12 +235,13 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ntoskrnl.lib hal.lib int64.lib ntstrsafe.lib exsup.lib ksecdd.lib WVBlk32.lib bufferoverflowK.lib ndis.lib"
-				OutputFile="$(OutDir)\$(ProjectName).sys"
+				OutputFile="$(SolutionDir)$(ConfigurationName)\bin\$(ProjectName).sys"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(WDKPATH)\lib\WIN7\i386&quot;;&quot;$(ProjectDir)Release&quot;"
+				AdditionalLibraryDirectories="&quot;$(WDKPATH)\lib\WIN7\i386&quot;;&quot;$(SolutionDir)$(ConfigurationName)\bin&quot;"
 				GenerateManifest="false"
 				IgnoreAllDefaultLibraries="true"
 				GenerateDebugInformation="true"
+				ProgramDatabaseFile="$(SolutionDir)$(ConfigurationName)\pdb\$(TargetName).pdb"
 				SubSystem="3"
 				Driver="1"
 				OptimizeReferences="2"
